# UR5e_Env

./: .gitignore  .gitmodules  Dockerfile  README.md  capture_image.py  connect4_game.py  docker-attach.sh  docker-build.sh  docker-compose.yml  docker-delete.sh  docker-kill.sh  docker-start.sh  docker-stop.sh  driver-start-script.sh  driver-start-ur-control.sh  initial_setup.sh
.helper-scripts/: get-user-confirmation.sh
blender-files/: base_link_gripper.blend  base_plate.blend  (+11 more)
workspace/src/move_it_action_server/: CMakeLists.txt  package.xml
workspace/src/move_it_action_server/src/: move_to_pose_action_server.cpp
workspace/src/par_pkg/: connect_four_controller.py  package.xml  setup.py
workspace/src/par_pkg/config/: kinematics.yaml  ur_servo.yaml
workspace/src/par_pkg/launch/: drivers.launch.py  par_pkg.launch.py  pick_and_place.launch.py
workspace/src/par_pkg/meshes/collision/: camerav3.stl  onrobot_eyes.stl  quick_changer.stl  rg2_finger.stl  rg2_inner_knuckle.stl  rg2_outer_knuckle.stl
workspace/src/par_pkg/meshes/visual/: base_plate.dae  camerav3.stl  onrobot_eyes.dae  onrobot_eyes_low_poly.dae  quick_changer_low_poly.dae  rg2_base_link_low_poly.dae  rg2_inner_knuckle_low_poly.dae  rg2_outer_knuckle.dae
workspace/src/par_pkg/par_pkg/: board_transformer_node.py  calibrate_camera_node.py  capture  capture1.py  capture_image.py  codevision  connect4.py  connect4_controller.py  cube_detection_node.py  grid_detection_node.py  gripper_control_node.py  gripper_state_publisher_node.py  helpers.py  image_publisher.py  main_controller_node.py  move_to_pose_node.py  pick_and_place.py  table_depth_image_node.py  test_connect4.py  vision_node.py
workspace/src/par_pkg/par_pkg/connect4/: connect4_client.py  connect4_testing.py
workspace/src/par_pkg/par_pkg/install/: local_setup.sh  setup.sh
workspace/src/par_pkg/par_pkg/log/: latest_build
workspace/src/par_pkg/par_pkg/onrobot/: onrobot.py
workspace/src/par_pkg/par_pkg/utils/: colour_string.py  rg2_client.py
workspace/src/par_pkg/rviz/: view_robot.rviz
workspace/src/par_pkg/srdf/: arm-with-camera-gripper.srdf.xacro  arm-with-camera.srdf.xacro  arm-with-gripper.srdf.xacro  ur_assembly.srdf.xacro
workspace/src/par_pkg/urdf/: arm-with-camera-gripper.urdf.xacro  arm-with-camera.urdf.xacro  arm-with-gripper.urdf.xacro  arm-with-joint.xacro  onrobot_eyes.urdf  onrobot_eyes.xacro  onrobot_eyes_model.urdf  onrobot_quick_changer.urdf  onrobot_quick_changer.xacro  onrobot_quick_changer_model.urdf  onrobot_rg2.xacro  onrobot_rg2_gripper.urdf  onrobot_rg2_model.urdf  ur.urdf.xacro  ur_assembly.urdf.xacro  ur_assembly_macro.xacro
(+127 files in other folders)
