<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>par_pkg</name>
  <version>0.0.0</version>
  <description>Python package for controlling a ur5e arm with moveit</description>
  <maintainer email="s3843035@student.rmit.edu.au">Daniel Mills</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>par_utils</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
